fix: remove top spacing from header using flow-root

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-* {
+html,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -37,7 +38,7 @@ main {
     flex-direction: column;
     position: relative;
     border: 1px solid rgba(0, 0, 0, 0.06);
-    padding: 20px
+    padding-left: 20px;
 }
 
 .product-list {
@@ -92,10 +93,11 @@ header {
     padding: 0;
     box-sizing: border-box;
     color: white;
+    display: flow-root;
 }
 
 .Header-title {
-    padding: 20px;
+    padding: 5px;
 }
 
 @media screen and (max-width: 480px) {
